--- a/src/styles/sass/partials/components/_Card.scss
+++ b/src/styles/sass/partials/components/_Card.scss
@@ -34,10 +34,8 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-}
-
-.counter-buttons {
-	button:nth-of-type(1) {
-		margin: 0 10px 0 0;
+	.add-button,
+	.remove-button {
+		width: 107.633px;
 	}
 }
